--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       }
       
       ::-webkit-scrollbar-thumb {
-        background: rgb(251, 190, 53);
+        background: rgb(0,255,255);
       }
     </style>
   </head>
@@ -902,20 +902,16 @@
           loading="lazy"
           sizes="(max-width: 479px) 100vw, (max-width: 767px) 100px, 140px"
           srcset="
-            https://assets.website-files.com/613e2717cd671517eca10357/614076d71d71893cd01ecae2_discord-front-p-500.png  500w,
-            https://assets.website-files.com/613e2717cd671517eca10357/614076d71d71893cd01ecae2_discord-front-p-800.png  800w,
             https://assets.website-files.com/613e2717cd671517eca10357/614076d71d71893cd01ecae2_discord-front.png       1000w
           "
-          alt="Cryptar Discord Channel"
+          alt="AP's MARSANIA Discord Server"
           class="discord-front" /><img
-          src="https://assets.website-files.com/613e2717cd671517eca10357/6140781fdece499447dd6469_discord-back.png"
+          src="discord.png"
           loading="lazy"
           data-w-id="3a6e3119-9a8b-7861-57a5-bbcecc867278"
           sizes="100vw"
           srcset="
-            https://assets.website-files.com/613e2717cd671517eca10357/6140781fdece499447dd6469_discord-back-p-500.png  500w,
-            https://assets.website-files.com/613e2717cd671517eca10357/6140781fdece499447dd6469_discord-back-p-800.png  800w,
-            https://assets.website-files.com/613e2717cd671517eca10357/6140781fdece499447dd6469_discord-back.png       1000w
+            discord.png       1000w
           "
           alt=""
           class="discord-back"
